--- a/maze-core/pom.xml
+++ b/maze-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>maze-core</artifactId>
+    <artifactId>guide-core</artifactId>
 
 
 </project>
