Add basic design

--- a/guide-core/pom.xml
+++ b/guide-core/pom.xml
@@ -7,9 +7,17 @@
         <artifactId>guide</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>guide-core</artifactId>
+    <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.6.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
