--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.guide</groupId>
-    <artifactId>guide</artifactId>
+    <groupId>com.github.navi</groupId>
+    <artifactId>navi</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>guide-core</module>
+        <module>navi-core</module>
     </modules>
 
     <packaging>pom</packaging>
