Provide navi-spring module. fix #3

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>navi-core</module>
+        <module>navi-spring</module>
     </modules>
 
     <packaging>pom</packaging>
