--- a/navi-spring/pom.xml
+++ b/navi-spring/pom.xml
@@ -3,20 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.github.navi</groupId>
         <artifactId>navi</artifactId>
+        <groupId>com.github.navi</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>navi-core</artifactId>
+    <artifactId>navi-spring</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-                <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
+        <dependency>
+            <groupId>com.github.navi</groupId>
+            <artifactId>navi-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
