--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
                 <version>5.0.6.RELEASE</version>
             </dependency>
 
+            <!-- Utils -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.7</version>
+            </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
