--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
                 <version>1.9.3</version>
             </dependency>
 
+            <!-- Others -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+            </dependency>
+
             <!-- Test -->
             <dependency>
                 <groupId>junit</groupId>
