Register all matcher processors under the default matcher package automatically.

--- a/navi-spring/pom.xml
+++ b/navi-spring/pom.xml
@@ -22,7 +22,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <!-- Utils -->
@@ -34,6 +33,11 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
             <optional>true</optional>
         </dependency>
 
