--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
                 <artifactId>commons-beanutils</artifactId>
                 <version>1.9.3</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>23.0</version>
+            </dependency>
 
             <!-- Others -->
             <dependency>
