Configure Jacoc and Codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: java
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+env:
+  global:
+    - CODECOV_TOKEN=f3b4d708-cac7-4328-a17d-1c0489d8ab76
