Refactor to expose the rejection reason.

--- a/navi-core/pom.xml
+++ b/navi-core/pom.xml
@@ -25,6 +25,17 @@
             <artifactId>commons-beanutils</artifactId>
         </dependency>
 
+        <!-- Others -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
