--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.16.18</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.25</version>
+            </dependency>
 
             <!-- Test -->
             <dependency>
