Correct scm connection in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,8 @@
 
     <scm>
         <url>https://github.com/yanglifan/navi/tree/master</url>
-        <connection>scm:git:git//github.com/yanglifan/navi.git</connection>
-        <developerConnection>scm:git:ssh://github.com/yanglifan/navi.git</developerConnection>
-        <tag>HEAD</tag>
+        <connection>scm:git:git@github.com:yanglifan/navi.git</connection>
+        <developerConnection>scm:git:git@github.com:yanglifan/navi.git</developerConnection>
     </scm>
 
     <developers>
